--- a/style.css
+++ b/style.css
@@ -1,49 +1,4 @@
-h1, h2 {
-  font-family: 'Oswald', sans-serif;
-}
-
 body {
-  font-family: 'Open Sans', sans-serif;
-  color: darkblue;
-  margin: 10px 50px 10px 50px;
-  background-color: Ivory;
-  width: 960px;
-}
+  margin-top: 50px;
 
-#navbar ul {
-  list-style-type: none;
-  margin :0;
-  padding: 0;
-}
-
-#navbar li {
-  display: inline;
-}
-
-#navbar a {
-  margin-right: 45px;
-  margin-left: 45px;
-}
-
-img {
-  float: left;
-  margin-right: 10px;
-}
-
-.left {
-  float: left;
-  width: 300px;
-  padding: 1em;
-}
-
-.right {
-  float: right;
-  width: 300px;
-  padding: 1em;
-}
-
-.center {
-  margin-left: 300px;
-  margin-right: 300px;
-  padding: 1em;
 }
